<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Geofence</string>
    <string name="button_mapopen">Open Map</string>
    <string name="edit_message">Search the Map!</string>
    <string name="titleactivity2">Map</string>
    <string name="Address">New Address</string>
	<string name="Radius">New Radius</string>
	<string name="ID">id</string>	
	<color name="white">#FFFFFF</color>
	<string name="edit_geofence">Edit Geofences</string>
	<string name="add_geofence">Add Geofence</string>
	<string name="confirm_new_geofence">Confirm New Geofence</string>
    <string name="nogeofences">To Get started, press the +</string>
    <string name="audiomute">Audio Mute</string>
    <string name="newname">New Name</string>
    <string name="confirm_edit_geofence">Confirm Edit</string>
    <string name="DropboxLink">Link Dropbox Account-NOT IMPLEMENTED</string>
    <string name="DroboxLinkSum">Sync Data and Settings Between Multiple Devices using the Dropbox
        Datastore Api. Requires a Dropbox Account.
    </string>
    <string name="DroboxLinked"> Unlink Dropbox Account
    </string>
    <string name="DroboxLinkedSum">A Dropbox account is currently linked. Unlinking will disable cross devices syncing, but your settings and Geofences will be preserved.
    </string>
    <string name="Dropbox">Dropbox</string>
    <string name="Settings">Settings</string>
    <string name="Commit">Commit Changes</string>
    <string name="action_add">Add a Action</string>
    <string name="drawer_open">Select Geofence</string>
    <string name="drawer_close">Selected Geofence</string>
    <string-array name="distances_array_metric">
        <item>100m</item>
        <item>250m</item>
        <item>500m</item>
        <item>750m</item>
        <item>1000m</item>
    </string-array>
    <string name="location_priority">Location Mode</string>
    <string name="location_priority_selection">Select a Mode</string>
    <string name="balancedpowersummary">Balaced Power</string>
    <string name="location_priority_summary">App wide location mode. Higher power modes are more accurate and responsive.</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
</resources>
