<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:title="@string/DropboxLink"
                android:summary="@string/DroboxLinkSum"
                android:key="pref_dropbox_link"
                android:defaultValue="false"
                >
    </CheckBoxPreference>
    <ListPreference
        android:key="pref_locpriority"
        android:title="@string/location_priority"
        android:summary="@string/location_priority_summary"
        android:dialogTitle="@string/location_priority_selection"
        android:entries="@array/location_priority_array"
        android:entryValues="@array/location_priority_values"
        android:defaultValue="102" >
    </ListPreference>
</PreferenceScreen>