<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/Radiusedit"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Radius"
        android:layout_above="@+id/EditSwitch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/Addressedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Address"
        android:layout_above="@+id/Radiusedit"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button2"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="commit"
        android:text="@string/Commit"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/NameEdit"
        android:layout_marginBottom="13dp"/>

    <org.holoeverywhere.widget.Switch
        android:id="@+id/EditSwitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audiomute"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Radiusedit"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NameEdit"
            android:hint="@string/newname"
            android:layout_above="@+id/Addressedit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>


</RelativeLayout>